# music-library-server

./: .gitignore  Cargo.toml  config.example.toml
migrations/: 20260512000001_initial.sql  20260513000001_playlists.sql  20260521000001_libraries.sql  20260521000002_remove_file_tags.sql  20260521000003_drop_source_column.sql
scripts/: restore_title_artist_from_filename.py  sync_added_at.py  wipe_file_tags.py
src/: config.rs  db.rs  libraries.rs  main.rs  scanner.rs
src/api/: auth.rs  error.rs  mod.rs  playlists.rs  scans.rs  search.rs  stream.rs  tags.rs  tracks.rs
